Replace Angle Brackets

--- a/_posts/2020-10-6-2020_3rdsummary.md
+++ b/_posts/2020-10-6-2020_3rdsummary.md
@@ -17,7 +17,7 @@ title: 2020 3분기 문화생활 결산
 ### [명예, 부, 권력에 관한 사색](http://book.naver.com/bookdb/book_detail.php?bid=16387197)
 속초에 가서 가장 열심히 읽었던 책. 물회 한 그릇의 가격과 내 연봉의 상관관계에 대해 고민하게 만들었던 책이기도 하다.
 
-트위터 타임라인에서 마주친 누군가가 여름 휴가동안 읽기 좋은 책으로 추천해 줘서 구매했다. 저자가 이전에 쓴 책 <마르케스의 서재에서>를 언급하거나 철학적인 비유를 하는 건 좀 알아듣기 어려웠지만, 제목과 표지에서 느껴지는만큼 대단한 내공을 필요로 하는 책은 아니었다. 정치경제에 대한 지식 없이도 무난하게 읽을 수 있다. 통찰력 있고 유머도 있는 교수님의 TED 강의 모음집 같은 느낌?
+트위터 타임라인에서 마주친 누군가가 여름 휴가동안 읽기 좋은 책으로 추천해 줘서 구매했다. 저자가 이전에 쓴 책 "마르케스의 서재에서"를 언급하거나 철학적인 비유를 하는 건 좀 알아듣기 어려웠지만, 제목과 표지에서 느껴지는만큼 대단한 내공을 필요로 하는 책은 아니었다. 정치경제에 대한 지식 없이도 무난하게 읽을 수 있다. 통찰력 있고 유머도 있는 교수님의 TED 강의 모음집 같은 느낌?
 
 명예, 부, 권력 이렇게 셋을 한 줄로 세워두고 보면 명예는 정말이지 옛것이다. 누가 봐도 부가 가장 최신유행이고, 명예라는 단어는 글자 하나하나에서 고루한 냄새가 나는 것만 같다. 그렇지만 저자는 나이 든 아저씨 답게 명예의 시대를 그리워한다. 실은 나도 명예의 나라에 사는 시민1이고 싶다.
 
