--- a/_posts/2021-7-4-2021_2ndsummary.md
+++ b/_posts/2021-7-4-2021_2ndsummary.md
@@ -23,8 +23,8 @@ title: 2021 2분기 문화생활 결산
 미디어에서 사회적 약자를 다룰 때 힘들고 고된 면모만 보여주는 것도 좋은 게 아니란 걸 안다. 그게 결국 어떠한 편견을 강화시켜 이분법적인 선을 만들어 버리니까. 그렇지만 사회적 약자가 자기 삶을 토닥이는 과정에 이렇게나 아름다운 대자연을 덧대 버리면 주인공보다 대자연이 눈에 들어오지 않나. 주인공의 현실은 너무나도 가난에 직결되어 있어 계절이 바뀔 때마다 일자리를 옮겨 다니는데 거기엔 별다른 상승/하강이 없다는 점도 걸리고, 무엇보다 주인공과 다른 인물이 유가족으로서의 상실감을 공유하는 끝 장면이 나를 숨막히게 했다. 이 장면이 초반부에 나왔다면 훨씬 편했을 것이다. 그런데 영화를 마무리하는 지점에서 자신을 유가족으로 정체화하는 건, 마치 이 유목민 생활을 하는 사람들 모두가 어떤 '해결되어야 할' 문제를 안고 있어서 유목민 생활을 하는 것처럼 보이게 하지 않나? 나한텐 예민한 지점이라 편하게 보기 힘들었다.
 
 ### [더 파더](https://movie.naver.com/movie/bi/mi/basic.nhn?code=191920)
-나는 이 영화가 너무 무섭다고 생각했다. 그간 내가 미디어에서 봤던 치매 환자는 <내 머리 속의 지우개> 의 수진처럼 가련하고 애틋한 멜로드라마 주인공이거나, 집안을 좀먹는 골칫거리이자 때로는 그 모습 자체가 희화화되는 쪽이었다. 그런데 이 영화에선 안소니 홉킨스가 연기를 너무 잘한다. 단 한 번도 치매 환자의 시점에서 세상이 어떻게 보일지 생각해 본 적이 없었는데 마지막에 안소니 홉킨스가 엉엉 울 때는 내 마음도 무너졌다. 저 사람 입장에선 너무너무 무섭겠다 싶었고, 나는 나대로 저런 일이 나에게 닥칠까봐 무서웠다. 
-그런데 <김혜리의 필름클럽> 에서 이 영화를 다룬 에피소드를 틀었다가, 실제로 가족 구성원 중 한 명이 치매를 앓고 있는 시청자의 사연을 듣게 됐다. 영화 속의 주인공처럼 자기 가족도 아침, 낮, 오후, 저녁 구분을 잘 못해서 저녁 식사까지 해놓고 자꾸 아침인줄 안다고. 그럼 늘 아침 아니라고 정정해 드리는데, 영화를 보고 나니 자기가 너무 자기 기준으로 생각했던 거 같다고. 자기는 이 영화가 무섭지 않았고 그저 가족의 입장에서 생각해 볼 계기가 됐다는 그런 내용이었다. 
+나는 이 영화가 너무 무섭다고 생각했다. 그간 내가 미디어에서 봤던 치매 환자는 "내 머리 속의 지우개" 의 수진처럼 가련하고 애틋한 멜로드라마 주인공이거나, 집안을 좀먹는 골칫거리이자 때로는 그 모습 자체가 희화화되는 쪽이었다. 그런데 이 영화에선 안소니 홉킨스가 연기를 너무 잘한다. 단 한 번도 치매 환자의 시점에서 세상이 어떻게 보일지 생각해 본 적이 없었는데 마지막에 안소니 홉킨스가 엉엉 울 때는 내 마음도 무너졌다. 저 사람 입장에선 너무너무 무섭겠다 싶었고, 나는 나대로 저런 일이 나에게 닥칠까봐 무서웠다. 
+그런데 "김혜리의 필름클럽" 에서 이 영화를 다룬 에피소드를 틀었다가, 실제로 가족 구성원 중 한 명이 치매를 앓고 있는 시청자의 사연을 듣게 됐다. 영화 속의 주인공처럼 자기 가족도 아침, 낮, 오후, 저녁 구분을 잘 못해서 저녁 식사까지 해놓고 자꾸 아침인줄 안다고. 그럼 늘 아침 아니라고 정정해 드리는데, 영화를 보고 나니 자기가 너무 자기 기준으로 생각했던 거 같다고. 자기는 이 영화가 무섭지 않았고 그저 가족의 입장에서 생각해 볼 계기가 됐다는 그런 내용이었다. 
 나는 아직도 그 사연에서 느낀 아득함을 따라갈 수가 없다. 내가 치매에 걸리면 어쩌지 하고 불안에 떠는 나 자신이 너무 부끄러운데, 저렇게 담담하게 받아들이는 건 지금의 나에겐 불가능한 영역 같다. 언젠가는 가능할까? 
 
 ### [프레이밍 브리트니](https://watcha.com/contents/share/tE6YG8N)
