--- a/_posts/2022-1-3-2021_4thsummary.md
+++ b/_posts/2022-1-3-2021_4thsummary.md
@@ -23,7 +23,7 @@ title: 2021 4분기 문화생활 결산
 난민 이야기가 나올 때마다 우리도 불과 몇십년 전에는 난민이었다는 역지사지 설득을 많이들 시도하지만 그건 그것대로 불안하다. 언젠가 내가 비슷한 처지에 처할지도 모르기 때문에 챙겨야 하는 거라면, 최대한 '저 처지'에 처하지 않도록 노력하는 방향으로 나아가 버릴수도 있잖아요. 내 안에도 '저 처지가 되기 싫다'는 불안이 있고. 어쩌면 내가 이 난민들과 살갖 부대끼며 살지 않기 때문에 이런 순수한 동정심만을 가지는 걸 수도 있고.
 
 ### [어떻게 지내요](http://book.naver.com/bookdb/book_detail.php?bid=20861895)
-학창시절에 애용했던 대전의 서점 <우분투북스> 에서 책 구독을 신청했다. 홍차의 역사에 관련된 책 한 권과 이 책을 받았다.
+학창시절에 애용했던 대전의 서점 우분투북스 에서 책 구독을 신청했다. 홍차의 역사에 관련된 책 한 권과 이 책을 받았다.
 암 말기 진단을 받은 친구와 그 친구를 바라보는 주인공의 이야기였다. 조용하고 잔잔하고 좋은 이야기였다.
 병으로 더 고통스러워지기 전에 스스로 생을 마감하리라 결심했다가 결국은 마음이 바뀌는 이야기는 이전에도 접한 적이 있지만, 너무 극적으로 다루지 않아서 좋았다. 나이 들어도 별 거 없다는 기조는 좀 쓸쓸은 하되 담백했다. 
 
@@ -47,10 +47,10 @@ title: 2021 4분기 문화생활 결산
 ### [해피 아워](https://movie.naver.com/movie/bi/mi/basic.nhn?code=142855)
 전에 하마구치 류스케 감독 특별전 할 때 한번 봤었지만 이번에 2회차 관람을 했다. 5시간 반짜리 영화를 2회차 관람할 수 있는 나 자신이 좀 대견했다. 그리고 좋은 영화는 두 번 봐도 좋은 영화였다. 
 
-일본은 이렇다- 같은 말을 함부로 할 수는 없지만 그래도 그간 봐왔던 일본 애니메이션과 JPOP 노래 가사를 보면 일본은 참 마음을 전하고 타인과 연결되는 것에 관심이 많은 것 같다가도 '안타깝게 연결되지 못하는' 자아에 취해있다는 인상을 받는데, 그래서 그런 아련하고 쓸쓸하게 홀로되는 감성을 깨부수고 우리 대화 좀 하자! 하는 작품들에 더 마음이 간다 애니메이션으로는 <사라잔마이>가 그랬고 영화로는 <해피 아워>와 <아사코>가 그랬다. 타인의 삶을 침범한다는 건 어쩔 수 없이 폭력적이고, 가해자가 되기 싫어 적당한 거리를 계속 유지하면 영원히 타인에겐 도달하지 못하는 거 같아.
+일본은 이렇다- 같은 말을 함부로 할 수는 없지만 그래도 그간 봐왔던 일본 애니메이션과 JPOP 노래 가사를 보면 일본은 참 마음을 전하고 타인과 연결되는 것에 관심이 많은 것 같다가도 '안타깝게 연결되지 못하는' 자아에 취해있다는 인상을 받는데, 그래서 그런 아련하고 쓸쓸하게 홀로되는 감성을 깨부수고 우리 대화 좀 하자! 하는 작품들에 더 마음이 간다 애니메이션으로는 "사라잔마이"가 그랬고 영화로는 "해피 아워"와 "아사코"가 그랬다. 타인의 삶을 침범한다는 건 어쩔 수 없이 폭력적이고, 가해자가 되기 싫어 적당한 거리를 계속 유지하면 영원히 타인에겐 도달하지 못하는 거 같아.
 
 ### [엔칸토: 마법의 세계](https://movie.naver.com/movie/bi/mi/basic.nhn?code=210282)
-속초 여행 가 있는동안 봤다. 화법은 옛날의 디즈니와 많이 달라졌지만 가족의 소중함을 말한다는 점은 역시나 디즈니 다웠다. 양육자의 가르침을 아동-주인공이 부정하며 성장하는 스토리라인이 <겨울왕국>과 <코코>를 타고 <엔칸토>로 이어졌다는 느낌. 그전의 작품에도 그런 요소가 없지는 않았는데 (사실 대부분의 주인공들이 양육자와 마찰을 일으키며 작품의 오프닝을 열었는데) 그때는 결국 가부장제의 질서 안으로 아동-주인공이 다시 들어오는 것으로 해피엔딩이 정의되었다면 양육자의 틀 자체가 잘못되었다고 말하는 건 <겨울왕국> 이 첫 시작이지 않았나 싶다. 부모 없이 자매 둘이서 스토리를 완성시키는 것도 그렇고. <엔칸토>에선 한 발 더 나가서 주변 인물들의 이야기를 많이 들어주는 게 좋았다. 이사벨라와 루이사, 브루노를 거쳐 할머니까지 각자 자기 자리에서 애쓴 결과가 이거였다는 걸 적극적으로 말해주는 게 인상적이었다. 어른의 사정을 합리화하기 위해서가 아니라, 아동이 자기 양육자를 잘 이해하기 위해서 이런 커뮤니케이션은 필요하지 않을까.
+속초 여행 가 있는동안 봤다. 화법은 옛날의 디즈니와 많이 달라졌지만 가족의 소중함을 말한다는 점은 역시나 디즈니 다웠다. 양육자의 가르침을 아동-주인공이 부정하며 성장하는 스토리라인이 "겨울왕국"과 "코코"를 타고 "엔칸토"로 이어졌다는 느낌. 그전의 작품에도 그런 요소가 없지는 않았는데 (사실 대부분의 주인공들이 양육자와 마찰을 일으키며 작품의 오프닝을 열었는데) 그때는 결국 가부장제의 질서 안으로 아동-주인공이 다시 들어오는 것으로 해피엔딩이 정의되었다면 양육자의 틀 자체가 잘못되었다고 말하는 건 "겨울왕국" 이 첫 시작이지 않았나 싶다. 부모 없이 자매 둘이서 스토리를 완성시키는 것도 그렇고. "엔칸토"에선 한 발 더 나가서 주변 인물들의 이야기를 많이 들어주는 게 좋았다. 이사벨라와 루이사, 브루노를 거쳐 할머니까지 각자 자기 자리에서 애쓴 결과가 이거였다는 걸 적극적으로 말해주는 게 인상적이었다. 어른의 사정을 합리화하기 위해서가 아니라, 아동이 자기 양육자를 잘 이해하기 위해서 이런 커뮤니케이션은 필요하지 않을까.
 
 그리고 다 떠나서 노래가 너무 좋았다! 노래 구성이 꽤나 케이팝 스러워서 듣는 내내 디즈니의 변화를 실감했다.
 
