--- a/_posts/2021-3-29-2021_1stsummary.md
+++ b/_posts/2021-3-29-2021_1stsummary.md
@@ -8,13 +8,13 @@ title: 2021 1분기 문화생활 결산
 ## 책
 
 ### [기이한 것과 으스스한 것](http://book.naver.com/bookdb/book_detail.php?bid=15056985)
-<자본주의 리얼리즘>을 작년에 너무 재밌게 읽었어서 같은 저자의 다른 책을 도서관에서 빌려봤다. 아는 거 많고 문장 정확하게 쓰는 평론가가 자기 취향의 작품들을 성실하게 영업하는 책이었다. 책의 정의에 따르면 나는 으스스한 것보다 기이한 게 훨씬 취향인 사람.
+"자본주의 리얼리즘"을 작년에 너무 재밌게 읽었어서 같은 저자의 다른 책을 도서관에서 빌려봤다. 아는 거 많고 문장 정확하게 쓰는 평론가가 자기 취향의 작품들을 성실하게 영업하는 책이었다. 책의 정의에 따르면 나는 으스스한 것보다 기이한 게 훨씬 취향인 사람.
 
 ### [민담형 인간](http://book.naver.com/bookdb/book_detail.php?bid=16355751)
 책의 방향이 좀 어중간하다고 느껴졌다. 차라리 각 나라의 민담을 소개해주는 책이었다면 민담 입문 가이드로 가볍게 읽었을 테고, 학술적인 내용을 많이 다뤘다면 (실은 이 쪽을 기대했는데) 그 나름의 재미가 있었을텐데 이도 저도 아니었달까. 저자 분은 민담에 대해 말하는 것만으로도 즐거운지 꽤 높은 텐션으로 설명을 이어가지만, 독자로선 같이 즐거워지기 보다 구경꾼의 마인드로 '아 예 그러시군요...' 하게 되는 책.
 
 ### [책에 갇히다](http://book.naver.com/bookdb/book_detail.php?bid=17664109)
-책과 서점에 대한 SF 앤솔로지 라니, 책 소개에 쓰인 모든 단어가 취향이라서 안 읽어볼 수 없었다. 수록된 단편 중 <붉은구두를 기다리다> 과 <금서의 계승자>가 제일 취향이었다. <붉은구두를 기다리다> 의 경우 종이책 없이 구전설화만이 존재하는 세계관으로 시작해서 소설 자체가 다시 하나의 구전설화를 이루는 구조, 주인공의 성별을 계속 교묘하게 숨기다가 마지막에 드러내는 연출, 왼아버지/오른아버지라는 섬세한 표현 등이 좋았다. <금서의 계승자>는 책에 대한 SF라는 소개에서 기대했던 내용에 가장 가까웠고, 아포칼립스 세계관과 캐릭터들이 너무너무 현실적이어서 읽는 내내 과몰입을 빠져나올 수 없었다. 왠지 억압받는 시대의 첩보물이나 혁명물 잘 쓰실 거 같은데. 일단 브릿지에 문녹주 작가님이 쓰신 첩보물이 있길래 킵해뒀다.
+책과 서점에 대한 SF 앤솔로지 라니, 책 소개에 쓰인 모든 단어가 취향이라서 안 읽어볼 수 없었다. 수록된 단편 중 "붉은구두를 기다리다" 와 "금서의 계승자"가 제일 취향이었다. "붉은구두를 기다리다" 의 경우 종이책 없이 구전설화만이 존재하는 세계관으로 시작해서 소설 자체가 다시 하나의 구전설화를 이루는 구조, 주인공의 성별을 계속 교묘하게 숨기다가 마지막에 드러내는 연출, 왼아버지/오른아버지라는 섬세한 표현 등이 좋았다. "금서의 계승자"는 책에 대한 SF라는 소개에서 기대했던 내용에 가장 가까웠고, 아포칼립스 세계관과 캐릭터들이 너무너무 현실적이어서 읽는 내내 과몰입을 빠져나올 수 없었다. 왠지 억압받는 시대의 첩보물이나 혁명물 잘 쓰실 거 같은데. 일단 브릿지에 문녹주 작가님이 쓰신 첩보물이 있길래 킵해뒀다.
 
 ### [언니밖에 없네](http://book.naver.com/bookdb/book_detail.php?bid=16492526)
 3월부터 4월 중순까지 말과활 아카데미 비평 강좌를 듣는다. 이 책은 4월 첫째주에 다뤄질 예정인데, 퀴어문학 단편선이라는 말에 그냥 도서관에서 빌려서 바로 읽고 글을 썼다. (피드백을 받고 싶어서 썼는데 아직 아무도 피드백을 주지 않았다 주르륵..)
@@ -52,7 +52,7 @@ title: 2021 1분기 문화생활 결산
 이게 당사자의 자기재현이라면 당사자 아닌 내가 함부로 말 얹을 수는 없지만, 솔직히 내 땅 갖고 농사 짓는 게 평생의 꿈이었다고 고집 피우는 남성 캐릭터는 더 이상 보고 싶지 않았다. 가정의 유지를 위해 이리저리 갈려나간 여성 인물들이 마지막 씬에선 자취를 감춘 것도 충격이었다. 감독의 자전적인 이야기니까, 자기가 어렸을 때 갖고 있던 좁은 시선을 있는 그대로 보여준 건가 싶다가도.. 아니 근데 마무리를 이렇게 한다고? 할머니는? 할머니는! 하는 생각이 끊이지 않았던 영화.
 
 ### [소울](https://movie.naver.com/movie/bi/mi/basic.nhn?code=184517)
-<인사이드 아웃> 만큼 강렬하진 않았다. 재즈 음악이 듣기 좋았고, 선과 면의 조합으로 만들어지는 애니메이션은 예뻤지만 내용 전개는 꼭 마음수련 캠프 같다는 생각을 지울 수 없었다. 컨텐츠는 별다른 의도를 하지 않았는데 관객인 내가 힐링을 받는 것과, 컨텐츠가 처음부터 짜잔 우리는 너의 마음을 치료해 줄거란다 못박고 시작하는 것의 차이일까.
+"인사이드 아웃" 만큼 강렬하진 않았다. 재즈 음악이 듣기 좋았고, 선과 면의 조합으로 만들어지는 애니메이션은 예뻤지만 내용 전개는 꼭 마음수련 캠프 같다는 생각을 지울 수 없었다. 컨텐츠는 별다른 의도를 하지 않았는데 관객인 내가 힐링을 받는 것과, 컨텐츠가 처음부터 짜잔 우리는 너의 마음을 치료해 줄거란다 못박고 시작하는 것의 차이일까.
 
 ### [화양연화](https://movie.naver.com/movie/bi/mi/basic.nhn?code=28876)
 왕가위 영화를 올해 처음으로 봤다. 애틋하고 아련한 로맨스에 영 흥미가 없는지라 두 배우의 미모 감상만 실컷했다. 내가 화양연화를 본다고 하자 친구 한 명이 양조위는 걷는 것만 봐도 섹시하다고 했다. 그래서 양조위가 걷는 장면이 나올 때마다 유심히 들여다 봤지만 잘 알 수 없었다. 난 오히려 장만옥의 치파오가 더 인상적이었다. 장만옥은 귀여운 치파오를 입으면 치명적으로 귀엽고, 우아한 치파오를 입으면 치명적으로 우아하더라. 양조위는.. 만두 먹방을 잘한다. 영화 보고 집에 와서 만두 쪄먹었다.
@@ -61,4 +61,4 @@ title: 2021 1분기 문화생활 결산
 상영관람가가 15세 이상이길래 섹스신이 안 나오는 줄 알고 있다가 깜짝 놀랐다. 일부러 15금인 작품으로 고른 건데 이러기 있냐구요. 역시나 애달프고 절절한 사랑 이야기는 뜬구름처럼 지나갔고 둘이 사이좋게 밥먹던 장면만 기억에 남았다. 국수 맛있겠다...
 
 ### [미쓰백](https://movie.naver.com/movie/bi/mi/basic.nhn?code=155356)
-<말과활 아카데미> 비평 강좌에서 1주차에 다룬 게 이 영화였다. 보는 내내 영화가 너무 폭력적이라 경악했다. 영화가 일부러 주인공을 계속 극단적인 선택지로 몰아가고 있다고 느꼈고, 그렇게 몰리고 몰린 끝에 (자기 어린 시절을 연상케 하는) 아이를 구해주는 결말이라면 이건 약자 간의 연대가 아니라 자기연민의 완성이라는 생각이 들었다. 특히 아이가 주인공의 머리를 쓰다듬는 장면은 정말 오마이갓... 사실 저 아이는 주인공 눈에만 보이는 환상이고 주인공은 심적으로 구원받고픈 나머지 아이라는 가상인물을 만들어낸 거 아닐까요?
+"말과활 아카데미" 비평 강좌에서 1주차에 다룬 게 이 영화였다. 보는 내내 영화가 너무 폭력적이라 경악했다. 영화가 일부러 주인공을 계속 극단적인 선택지로 몰아가고 있다고 느꼈고, 그렇게 몰리고 몰린 끝에 (자기 어린 시절을 연상케 하는) 아이를 구해주는 결말이라면 이건 약자 간의 연대가 아니라 자기연민의 완성이라는 생각이 들었다. 특히 아이가 주인공의 머리를 쓰다듬는 장면은 정말 오마이갓... 사실 저 아이는 주인공 눈에만 보이는 환상이고 주인공은 심적으로 구원받고픈 나머지 아이라는 가상인물을 만들어낸 거 아닐까요?
