--- a/_posts/2021-9-27-2021_3rdsummary.md
+++ b/_posts/2021-9-27-2021_3rdsummary.md
@@ -14,7 +14,7 @@ title: 2021 3분기 문화생활 결산
 일흔이 넘어도 정체성과 여생에 대한 고민이 끝나지 않는다니 좀 막막하기도 하고, 한편으론 젊은 시절에 호기롭게 고향을 떠나온 사람이 나이 들어선 결국 돌아갈 고민을 하는 게 아, 결국은 이런 건가? 싶기도 했다
 
 ### [당신 엄마 맞아?](http://book.naver.com/bookdb/book_detail.php?bid=14648824)
-텀블벅으로 구매했으니 산지는 정말 오래 됐는데, 작가님의 전작인 <펀홈>도 술술 읽히는 만화는 아니었기 때문에 독서의 각오를 다지는 데만 1년 넘게 걸렸다. 읽는 내내 헛웃음이 계속 나왔다. 어떻게 이런 복합적인 주제와 이야기를 한 덩어리로 다루지? 이 만화의 주된 내용은 작가 본인이 정신 분석을 받았던 경험과 직접 공부한 정신 분석 이론들이다. 독자는 앨리슨 백델이 위니캇과 프로이트와 그 외 다양한 정신 분석 이론가들의 문헌을 자유자재로 오가며 자신의 내면 세계를 파헤치는 여정을 따라가게 된다. 무려 300쪽 가까이 되는 분량과 고밀도로 압축된 텍스트를 통해서.
+텀블벅으로 구매했으니 산지는 정말 오래 됐는데, 작가님의 전작인 "펀홈"도 술술 읽히는 만화는 아니었기 때문에 독서의 각오를 다지는 데만 1년 넘게 걸렸다. 읽는 내내 헛웃음이 계속 나왔다. 어떻게 이런 복합적인 주제와 이야기를 한 덩어리로 다루지? 이 만화의 주된 내용은 작가 본인이 정신 분석을 받았던 경험과 직접 공부한 정신 분석 이론들이다. 독자는 앨리슨 백델이 위니캇과 프로이트와 그 외 다양한 정신 분석 이론가들의 문헌을 자유자재로 오가며 자신의 내면 세계를 파헤치는 여정을 따라가게 된다. 무려 300쪽 가까이 되는 분량과 고밀도로 압축된 텍스트를 통해서.
 이 책은 '만화로 보는 도널드 위니캇의 정신 분석 이론' 부제가 붙어도 전혀 이상하지 않다. 그만큼 정신 분석 이론을 깊게 다룬다. 또 작가와 엄마 사이의 갈등이 메인 테마이긴 하지만, 그 갈등은 소설처럼 선형적인 서사를 가지는 게 아니라 거미줄처럼 여기저기에 뿌리를 두고 있기 때문에 한두줄로 요약 설명도 불가능하다. 작가도 애초에 자신과 엄마의 갈등을 서사 구조로 전시하고자 하지는 않은 것 같고.
 힘겹게 따라간 끝에, 맨 마지막 장의 내용에서 눈이 번쩍 뜨였다. 위니캇의 이론에 따르면, 아기가 자기 자신과 어머니를 별개의 존재로 보지 못하면 아기는 그저 어머니를 '이해'하기만 한다. 하지만 아기는 언젠가 어머니를 자기 뜻대로 '이용'할 수 있어야 한다. '이용'하는 능력은 후천적으로 길러지는 것이기에 어머니가 직접 가르쳐야 하는데, 이 과정을 거치지 못하면 아기는 자신의 감정과 어머니의 감정을 분리해서 보지 못한다. 이것을 한 문장으로 정리하길, '주체(아기)는 언젠가 대상(어머니)를 파괴해야 하고, 대상은 파괴로부터 살아남아야 한다'고. 
 마지막 장에서 갑자기 머리를 꽝 맞은 덕에 위니캇의 책을 직접 읽고 싶어서 찾아봤는데, 정말 너무 이론서 뿐이라 관뒀다.
@@ -33,10 +33,10 @@ title: 2021 3분기 문화생활 결산
 AJS 작가님이 참여한 책을 그냥 다 사고 있다. 여성 캐릭터와 초능력이 등장한다는 것 외에는 공통점이 없는 다섯 편의 단편 만화가 실렸고, 모든 편이 재밌었지만, 떡볶이 배달 오토바이가 창문 깨부수는 신으로 시작하는 단편이 제일 강렬했다. 
 
 ### [사랑하는 사람이 정신질환을 앓고 있을 때](http://book.naver.com/bookdb/book_detail.php?bid=16745794)
-요즘 이런 정신질환에 관련된 책이 많이 나오는데, 이 책은 제목에 정확히 부합하는 가이드북이다. 가족이 정신질환을 앓고 있을 때 질환에 따라 어떠한 증상이 나타날 수 있고, 각 증상에 따라 어떻게 대처하는 것이 좋은지를 알려주는 가이드북. 한 권의 책으로서 재미가 있다기 보다는 구급상비약처럼 펼쳐보게 되는 책. 의외로 내용 자체는 오은영 선생님의 <금쪽같은 내 새끼>와 통하는 면이 있다. 감정적인 사람을 상대할 때 '진정해 봐라' 같은 말은 안하느니만 못하다는 문장을 보고 깊게 반성했다. 
+요즘 이런 정신질환에 관련된 책이 많이 나오는데, 이 책은 제목에 정확히 부합하는 가이드북이다. 가족이 정신질환을 앓고 있을 때 질환에 따라 어떠한 증상이 나타날 수 있고, 각 증상에 따라 어떻게 대처하는 것이 좋은지를 알려주는 가이드북. 한 권의 책으로서 재미가 있다기 보다는 구급상비약처럼 펼쳐보게 되는 책. 의외로 내용 자체는 오은영 선생님의 "금쪽같은 내 새끼"와 통하는 면이 있다. 감정적인 사람을 상대할 때 '진정해 봐라' 같은 말은 안하느니만 못하다는 문장을 보고 깊게 반성했다. 
 
 ### [나는 흑인이다, 나는 흑인으로 남을 것이다](http://book.naver.com/bookdb/book_detail.php?bid=10832449)
-이번 학기에 수강하는 <제3세계의 문화와 역사> 의 중간과제를 위해 읽었다. 앞의 절반은 에메 세제르와의 대담으로, 그리고 나머지 절반은 대담을 마친 베르제의 후기로 이루어져 있는데 후기가 너무 어렵다. 너무너무너무 어렵다. 번역도 그다지 매끄럽지 않고, 전문용어를 남발하면서 제대로 해설도 해주지 않아 눈이 핑글핑글 돌아갔다. 포스트 식민주의가 당최 뭐냐구요. 결국 대담 부분만 읽고 과제를 끝냈다.
+이번 학기에 수강하는 "제3세계의 문화와 역사" 의 중간과제를 위해 읽었다. 앞의 절반은 에메 세제르와의 대담으로, 그리고 나머지 절반은 대담을 마친 베르제의 후기로 이루어져 있는데 후기가 너무 어렵다. 너무너무너무 어렵다. 번역도 그다지 매끄럽지 않고, 전문용어를 남발하면서 제대로 해설도 해주지 않아 눈이 핑글핑글 돌아갔다. 포스트 식민주의가 당최 뭐냐구요. 결국 대담 부분만 읽고 과제를 끝냈다.
 에메 세제르는 마르티니크의 자치권을 위해 오랫동안 활동해온 운동가이자 학자다. 마르티니크는 북미 대륙과 남미 대륙 사이에 위치한 자그마한 섬으로, 한때 프랑스의 식민 지배를 받았고 지금은 프랑스의 해외도로 지정되어 있다. 식민 지배 당시 원주민들을 쫓아내고 흑인 노예들을 아프리카에서 데려와 그곳에 정착시켰기 때문에 지금의 마르티니크 주민은 대부분 흑인이다. 하지만 마르티니크 주민들은 프랑스 국민으로서 자신들은 흑인들과는 다르다는 계급 의식을 갖고 있고, 그와 동시에 이 곳은 프랑스의 원조 없이는 사회 유지가 불가능할만큼 가난한 지역이기도 하다.
 그래서 세제르는
 
@@ -49,9 +49,9 @@ AJS 작가님이 참여한 책을 그냥 다 사고 있다. 여성 캐릭터와 
 대담 내용은 정말 좋았는데, 책의 절반에 달하는 후기를 하나도 이해하지 못하고 책을 반납한 게 너무 아쉽다.
 
 ### [벤야멘타 하인학교](http://book.naver.com/bookdb/book_detail.php?bid=6195249)
-로베르트 발저의 <산책자>를 좋아했어서, 도서관에서 별 생각없이 작가의 다른 책을 빌려봤다. 재미 없기가 힘든 내용이었다. 책 첫 문장이 무려 "우리는 여기서 배우는 것이 없다." 로 시작해서 "내면의 성공이 무슨 소용인가? 내면에서 이룩한 것들이 우리에게 먹을 것을 주기라도 하는가? 나는 정말이지 부자가 되고 싶다." 로 이어지기 때문. 책 전체가 이런 내용이다. 주인공은 이 하인학교의 가치관과 교육에 아주 뿌리깊은 회의를 느끼고 있고 비효율적이고 권위적인 모든 것들을 싫어한다. 그와 동시에 그런 예절을 몸 속 깊이 내면화하는 사람들을 존경하기도 한다.
+로베르트 발저의 "산책자"를 좋아했어서, 도서관에서 별 생각없이 작가의 다른 책을 빌려봤다. 재미 없기가 힘든 내용이었다. 책 첫 문장이 무려 "우리는 여기서 배우는 것이 없다." 로 시작해서 "내면의 성공이 무슨 소용인가? 내면에서 이룩한 것들이 우리에게 먹을 것을 주기라도 하는가? 나는 정말이지 부자가 되고 싶다." 로 이어지기 때문. 책 전체가 이런 내용이다. 주인공은 이 하인학교의 가치관과 교육에 아주 뿌리깊은 회의를 느끼고 있고 비효율적이고 권위적인 모든 것들을 싫어한다. 그와 동시에 그런 예절을 몸 속 깊이 내면화하는 사람들을 존경하기도 한다.
 
-중학생 때 읽었다면 꼭 인생 책을 찾은 것마냥 감동 받았을 텐데, 이제는 이런 시스템-해체-반항아 적인 텍스트는 재미는 있되 좀 진부하다. 예를 들어 "우리가 무언가를 이해하게 되면 그땐 그것이, 말하자면 우리를 소유하게 된다" 라던가, "대중, 그것은 현대판 노예다. 그리고 개인은 굉장한 집단 사고의 노예지." 같은 문장. 예예 다 맞는 말이죠 맞는 말인데 이미 다른 데서 한번씩 읽어봤다구요. 왠지 <데미안>이나 <나르치스와 골드문트> 같은 책에 똑같은 문장 있을 거 같고 막. 그래도 끝까지 읽은 건 다 작가의 재치 덕분이다. 유머마저 없었다면 힘들었을 것이다.
+중학생 때 읽었다면 꼭 인생 책을 찾은 것마냥 감동 받았을 텐데, 이제는 이런 시스템-해체-반항아 적인 텍스트는 재미는 있되 좀 진부하다. 예를 들어 "우리가 무언가를 이해하게 되면 그땐 그것이, 말하자면 우리를 소유하게 된다" 라던가, "대중, 그것은 현대판 노예다. 그리고 개인은 굉장한 집단 사고의 노예지." 같은 문장. 예예 다 맞는 말이죠 맞는 말인데 이미 다른 데서 한번씩 읽어봤다구요. 왠지 "데미안"이나 "나르치스와 골드문트" 같은 책에 똑같은 문장 있을 거 같고 막. 그래도 끝까지 읽은 건 다 작가의 재치 덕분이다. 유머마저 없었다면 힘들었을 것이다.
 
 ### [부디, 얼지 않게끔](http://book.naver.com/bookdb/book_detail.php?bid=17467058)
 한다리 건너 알게 된 지인이 소설을 냈다! 읽어봐야지 하고 알라딘 장바구니에 넣어뒀다가 얼마 전에 드디어 구매했고, 책이 얇아서 읽는 데는 하루도 걸리지 않았다. 여행사에서 가이드로 일하는 주인공이 어느 날 자기도 모르게 변온동물이 됐다는 설정으로 시작하는 SF 인데, 가이드라는 직업 특성상 베트남-제주-홋카이도-서울로 공간 배경이 계속 바뀌고 이에 따라서 주인공의 컨디션도 극명하게 달라진다. 여름의 베트남에서 다른 사람들 모두 기절할듯이 땀을 흘리고 있는데 주인공은 혼자 너무 편안하고, 홋카이도에선 모두가 진한 보라색의 라벤더 아이스크림을 손에 쥐고 즐거워 하는데 주인공은 혼자 삶의 위기를 느낀다. 그리고 겨울이 오자 이불과 패딩과 전열기구를 한껏 끌어안고 동면에 들어간다. (진짜다!)
@@ -59,7 +59,7 @@ AJS 작가님이 참여한 책을 그냥 다 사고 있다. 여성 캐릭터와 
 각 지역에 대한 묘사가 너무 생생해서, 이건 분명 직접 가보신 거다 여행 또 가고 싶은 마음을 담아서 쓴 게 틀림없다는 생각이 들었고 ㅋㅋ 변온동물이 된다는 설정 못지않게 주인공의 직장 동료인 '희진'의 캐릭터가 판타지 스러웠다. 아니 어떻게 직장 동료랑 단둘이 출장 갔다가 이렇게 짝짜꿍 잘 맞는 친구가 될 수 있어요. 운동 취미도 맞고 거리감도 적절하고, 변온동물이 됐다는 엄청난 고민까지 공유할 수 있는 사이라니. 그게 직장 동료랑 가능해요? ㅜㅜ 
 
 ### [회사인간, 회사를 떠나다](http://book.naver.com/bookdb/book_detail.php?bid=12254273)
-<북저널리즘> 이라는 시리즈를 우연히 서점 갔다가 알게 됐다. 주제 하나로 한 권의 책이 나오는데, 두께도 꽤 얇고 주제들도 아주 흥미로워서 가장 재밌어 보였던 주제 세 개를 골라 구매했다. 그리고 첫 시작으로 이걸 읽었다. 
+"북저널리즘" 이라는 시리즈를 우연히 서점 갔다가 알게 됐다. 주제 하나로 한 권의 책이 나오는데, 두께도 꽤 얇고 주제들도 아주 흥미로워서 가장 재밌어 보였던 주제 세 개를 골라 구매했다. 그리고 첫 시작으로 이걸 읽었다. 
 
 이 책에서 '회사인간'이란 1950년대 초반-후반 사이에 태어난 베이비붐 세대들을 일컫는 말이다. 이들은 개인의 성장이 곧 기업의 성장이고 나라의 성장이라고 주입받던 경제성장 시기에 조직 생활을 했기 때문에 회사에서의 공적 자아를 자기 정체성의 큰 뿌리로 삼고 있다. 자신의 내면을 드러내 보이면 경쟁에서 도태되는 사회에서 오랜 기간 살아왔기 때문에 공감 능력이 약해져 있고, 술자리를 통해 일시적 유대를 형성하는 것에 익숙해져 있다. 그래서 이들은 퇴직 이후에도 동년배를 찾아 끊임없는 술자리를 가진다. 이제 다른 거 필요 없고, 친구와 술자리만 있으면 행복하다며 자신의 소박한 성품을 광고하는 건 덤이다.
 
