--- a/_posts/2021-3-29-2021-first.md
+++ b/_posts/2021-3-29-2021-first.md
@@ -1,11 +1,10 @@
 ---
 layout: post
-title: 2021 1분기 문화생활 결산
+title: 2021 1분기 책 결산
+categories: books
 ---
 
 <img src="https://user-images.githubusercontent.com/8778711/152290967-54435636-c11d-4a5a-87e1-6f2e2fb9b6b9.png" width="300" />
-
-## 책
 
 ### [기이한 것과 으스스한 것](http://book.naver.com/bookdb/book_detail.php?bid=15056985)
 "자본주의 리얼리즘"을 작년에 너무 재밌게 읽었어서 같은 저자의 다른 책을 도서관에서 빌려봤다. 아는 거 많고 문장 정확하게 쓰는 평론가가 자기 취향의 작품들을 성실하게 영업하는 책이었다. 책의 정의에 따르면 나는 으스스한 것보다 기이한 게 훨씬 취향인 사람.
@@ -42,23 +41,3 @@ title: 2021 1분기 문화생활 결산
 클럽하우스 앱을 쓰던 시기에 만화와 웹툰에 대해 얘기하는 방이 있었는데 거기서 추천받았다. 표제작인 '노란 책'을 비롯해 여러 단편만화가 수록되어 있고, 난 아직 표제작밖에 읽지 못했다. 나머지는 아껴 읽어야지.
 
 타카노 후미코가 만화가들이 좋아하는 만화가로 불린다는데, 읽으면서 정말 그렇겠다는 생각이 들었다. 줄거리는 별 게 없다. '티보 가의 사람들'이라는 소설에 - 실제로 있는 소설이라 인용은 출판사의 허락을 구했다고 한다 - 푹 빠져있는 주인공이 등장하고, 주인공이 일상 생활 안에서도 책에 과몰입해 있는 모습을 보여주다가, 나중엔 주인공이 취직 준비를 위해 책을 반납하는 것으로 끝난다. 별다른 사건도 극적인 전개도 없다. 그저 70페이지 남짓한 분량 내내 과몰입이 현실을 어떻게 침범하는지만 보여주는데, 주인공이 하는 상상이 너무너무 자유로워서 독자도 같이 그 해방감에 넘실넘실 하게 되는 느낌. 그림체도 아주 느슨하고.
-
-## 영화
-
-### [나이브스 아웃](https://movie.naver.com/movie/bi/mi/basic.nhn?code=189000)
-왓챠 구독하고 처음으로 본 작품. 예상평점이 1점대로 나오길래 도대체 무슨 영화인가 혼란스러웠는데, 왓챠가 나의 추리물 취향을 잘 몰랐던 거 같다. 초등학생 땐 셜록 홈즈를 좋아했고 중-고등학교 땐 히가시노 게이고를 탐독했던 사람에게 매우 적절한 영화였다.
-
-### [미나리](https://movie.naver.com/movie/bi/mi/basic.nhn?code=187310)
-이게 당사자의 자기재현이라면 당사자 아닌 내가 함부로 말 얹을 수는 없지만, 솔직히 내 땅 갖고 농사 짓는 게 평생의 꿈이었다고 고집 피우는 남성 캐릭터는 더 이상 보고 싶지 않았다. 가정의 유지를 위해 이리저리 갈려나간 여성 인물들이 마지막 씬에선 자취를 감춘 것도 충격이었다. 감독의 자전적인 이야기니까, 자기가 어렸을 때 갖고 있던 좁은 시선을 있는 그대로 보여준 건가 싶다가도.. 아니 근데 마무리를 이렇게 한다고? 할머니는? 할머니는! 하는 생각이 끊이지 않았던 영화.
-
-### [소울](https://movie.naver.com/movie/bi/mi/basic.nhn?code=184517)
-"인사이드 아웃" 만큼 강렬하진 않았다. 재즈 음악이 듣기 좋았고, 선과 면의 조합으로 만들어지는 애니메이션은 예뻤지만 내용 전개는 꼭 마음수련 캠프 같다는 생각을 지울 수 없었다. 컨텐츠는 별다른 의도를 하지 않았는데 관객인 내가 힐링을 받는 것과, 컨텐츠가 처음부터 짜잔 우리는 너의 마음을 치료해 줄거란다 못박고 시작하는 것의 차이일까.
-
-### [화양연화](https://movie.naver.com/movie/bi/mi/basic.nhn?code=28876)
-왕가위 영화를 올해 처음으로 봤다. 애틋하고 아련한 로맨스에 영 흥미가 없는지라 두 배우의 미모 감상만 실컷했다. 내가 화양연화를 본다고 하자 친구 한 명이 양조위는 걷는 것만 봐도 섹시하다고 했다. 그래서 양조위가 걷는 장면이 나올 때마다 유심히 들여다 봤지만 잘 알 수 없었다. 난 오히려 장만옥의 치파오가 더 인상적이었다. 장만옥은 귀여운 치파오를 입으면 치명적으로 귀엽고, 우아한 치파오를 입으면 치명적으로 우아하더라. 양조위는.. 만두 먹방을 잘한다. 영화 보고 집에 와서 만두 쪄먹었다.
-
-### [해피 투게더](https://movie.naver.com/movie/bi/mi/basic.nhn?code=19335)
-상영관람가가 15세 이상이길래 섹스신이 안 나오는 줄 알고 있다가 깜짝 놀랐다. 일부러 15금인 작품으로 고른 건데 이러기 있냐구요. 역시나 애달프고 절절한 사랑 이야기는 뜬구름처럼 지나갔고 둘이 사이좋게 밥먹던 장면만 기억에 남았다. 국수 맛있겠다...
-
-### [미쓰백](https://movie.naver.com/movie/bi/mi/basic.nhn?code=155356)
-"말과활 아카데미" 비평 강좌에서 1주차에 다룬 게 이 영화였다. 보는 내내 영화가 너무 폭력적이라 경악했다. 영화가 일부러 주인공을 계속 극단적인 선택지로 몰아가고 있다고 느꼈고, 그렇게 몰리고 몰린 끝에 (자기 어린 시절을 연상케 하는) 아이를 구해주는 결말이라면 이건 약자 간의 연대가 아니라 자기연민의 완성이라는 생각이 들었다. 특히 아이가 주인공의 머리를 쓰다듬는 장면은 정말 오마이갓... 사실 저 아이는 주인공 눈에만 보이는 환상이고 주인공은 심적으로 구원받고픈 나머지 아이라는 가상인물을 만들어낸 거 아닐까요?
