--- a/_posts/2022-1-10-2021-this-year.md
+++ b/_posts/2022-1-10-2021-this-year.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 2021 회고
+categories: retrospection
 ---
 
 <img src="https://user-images.githubusercontent.com/8778711/152290122-0dd6d113-3cc6-4589-b7c3-8673c59730b4.png" width="400"/>
