--- a/_posts/2022-3-26-levinas.md
+++ b/_posts/2022-3-26-levinas.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 레비나스와 사랑의 현상학
+categories: books
 ---
 
 <img src="{{ site.baseurl }}/thumbnails/220326.png" width="300" />
