--- a/_posts/2022-3-27-2022-first.md
+++ b/_posts/2022-3-27-2022-first.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: 2022 1분기 문화생활(영상) 결산
+title: 2022 1분기 영화 결산
+categories: movies
 ---
 
 <img src="{{ site.baseurl }}/thumbnails/220327_movies/드라이브마이카.jpeg" width="300" />
