--- a/_posts/2022-7-27-2022-second.md
+++ b/_posts/2022-7-27-2022-second.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: 2022 2분기 문화생활(책) 결산
+title: 2022 2분기 책 결산
+categories: books
 ---
 
 <img src="{{ site.baseurl }}/thumbnails/220727_books/호메로스의일리아스.jpeg" width="300" />
