--- a/_posts/2020-12-25-2020-this-year.md
+++ b/_posts/2020-12-25-2020-this-year.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 2020 회고
+categories: retrospection
 ---
 
 <img src="https://user-images.githubusercontent.com/8778711/152291801-33abfde4-7f74-4e73-8355-24d10de6be17.png" width="300" />
