--- a/_posts/2022-10-13-2022-third-i.md
+++ b/_posts/2022-10-13-2022-third-i.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: 2022 3분기 문화생활(책) 결산 1편
+title: 2022 3분기 책 결산 1편
+categories: books
 ---
 
 <img src="{{ site.baseurl }}/thumbnails/221013_books/뒷전의주인공.jpeg" width="300" />
