--- a/_posts/2022-10-13-2022-third-ii.md
+++ b/_posts/2022-10-13-2022-third-ii.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: 2022 3분기 문화생활(책) 결산 2편
+title: 2022 3분기 책 결산 2편
+categories: books
 ---
 
 <img src="{{ site.baseurl }}/thumbnails/221013_books/망고와수류탄.jpeg" width="300" />
