--- a/_posts/2022-3-26-2022-first.md
+++ b/_posts/2022-3-26-2022-first.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: 2022 1분기 문화생활(책) 결산
+title: 2022 1분기 책 결산
+categories: books
 ---
 
 <img src="{{ site.baseurl }}/thumbnails/220326_books/나의이브생로랑에게.jpeg" width="300" />
