Remove githubusercontent images

--- a/_posts/2020-3-30-2020-first.md
+++ b/_posts/2020-3-30-2020-first.md
@@ -4,7 +4,7 @@ title: 2020 1분기 영화 결산
 categories: movies
 ---
 
-<img src="https://user-images.githubusercontent.com/8778711/152291628-46e68358-4176-43fa-b10a-0bd54187717b.png" width="300" />
+<img src="{{ site.baseurl }}/thumbnails/200330_movies/작은아씨들.png" width="300" />
 
 ## 영화
 ### [타오르는 여인의 초상](https://movie.naver.com/movie/bi/mi/basic.naver?code=185282)
