--- a/_posts/2020-6-24-2020-second.md
+++ b/_posts/2020-6-24-2020-second.md
@@ -4,7 +4,7 @@ title: 2020 2분기 영화/애니메이션 결산
 categories: movies
 ---
 
-<img src="https://user-images.githubusercontent.com/8778711/152291493-cea0eb81-83d3-4022-91e9-3e6f8c152f78.png" width="500" />
+<img src="{{ site.baseurl }}/thumbnails/200624_movies/이윽고네가된다.png" width="500" />
 
 ## 영화
 ### [톰보이](https://movie.naver.com/movie/bi/mi/basic.naver?code=85825)
