--- a/_posts/2021-3-29-2021-first.md
+++ b/_posts/2021-3-29-2021-first.md
@@ -4,7 +4,7 @@ title: 2021 1분기 책 결산
 categories: books
 ---
 
-<img src="https://user-images.githubusercontent.com/8778711/152290967-54435636-c11d-4a5a-87e1-6f2e2fb9b6b9.png" width="300" />
+<img src="{{ site.baseurl }}/thumbnails/210329_books/책에갇히다.png" width="300" />
 
 ### [기이한 것과 으스스한 것](http://book.naver.com/bookdb/book_detail.php?bid=15056985)
 "자본주의 리얼리즘"을 작년에 너무 재밌게 읽었어서 같은 저자의 다른 책을 도서관에서 빌려봤다. 아는 거 많고 문장 정확하게 쓰는 평론가가 자기 취향의 작품들을 성실하게 영업하는 책이었다. 책의 정의에 따르면 나는 으스스한 것보다 기이한 게 훨씬 취향인 사람.
