--- a/_posts/2021-7-4-2021-second.md
+++ b/_posts/2021-7-4-2021-second.md
@@ -4,7 +4,7 @@ title: 2021 2분기 책 결산
 categories: books
 ---
 
-<img src="https://user-images.githubusercontent.com/8778711/152290801-4e2ba238-5a28-4015-85aa-72434979b254.png" width="300"/>
+<img src="{{ site.baseurl }}/thumbnails/210704_books/어린이라는세계.png" width="300" />
 
 ### [비트의 세계](http://book.naver.com/bookdb/book_detail.php?bid=18990670)
 중간고사 공부를 하던 어느 날 나는 그만 정신줄을 놓고 사지 말아야 하는 책을 사 버렸다. 알라딘으로 배송 받은 그날 다 읽었고 곧바로 중고서점에 책을 내주었다. 읽는 내내 깔깔 웃긴 했다. 특히 저자가 개발자란 직업을 성직자에 비유하는 것에선 거의 포복절도했다 아 이게 대체 어떻게 된 일이에요........ 자의식 과잉의 작가를 탓해야 해 이런 책을 고른 나를 탓해야 해...
