--- a/_posts/2021-9-27-2021-third.md
+++ b/_posts/2021-9-27-2021-third.md
@@ -4,7 +4,7 @@ title: 2021 3분기 책 결산
 categories: books
 ---
 
-<img src="https://user-images.githubusercontent.com/8778711/152290548-2f7da834-c165-4458-be03-153eb1cfca63.png" width="300"/>
+<img src="{{ site.baseurl }}/thumbnails/210927_books/당신엄마맞아.png" width="300" />
 
 ### [다시 쓸 수 있을까](http://book.naver.com/bookdb/book_detail.php?bid=14623305)
 작년에 사스미 언니의 추천을 받고 알라딘 보관함에 넣어뒀던 책인데, 막상 구매의 뽐뿌는 오지 않아 보관함에만 넣어둔채 일년이 지났다.
