--- a/_posts/2022-1-3-2021-fourth.md
+++ b/_posts/2022-1-3-2021-fourth.md
@@ -4,7 +4,7 @@ title: 2021 4분기 책 결산
 categories: books
 ---
 
-<img src="https://user-images.githubusercontent.com/8778711/152289819-116ebd6f-1468-47af-b0df-f9d1385bfe3e.png" width="300"/>
+<img src="{{ site.baseurl }}/thumbnails/220103_books/초인적힘의비밀.png" width="300" />
 
 ## 책
 
