--- a/_posts/2020-12-25-2020-this-year.md
+++ b/_posts/2020-12-25-2020-this-year.md
@@ -4,7 +4,8 @@ title: 2020 회고
 categories: retrospection
 ---
 
-<img src="https://user-images.githubusercontent.com/8778711/152291801-33abfde4-7f74-4e73-8355-24d10de6be17.png" width="300" />
+<img src="{{ site.baseurl }}/thumbnails/201225/this-year.png" width="300" />
+
 
 ### 4년차 개발자의 소회
 - 그간 늘 iOS 팀원 수가 둘셋 정도였는데 작년 말에 다섯이 됐고 현재는 일곱.
